Small edits and code overflow fixes

--- a/PersonalSite/css/bootstrap.css
+++ b/PersonalSite/css/bootstrap.css
@@ -760,11 +760,10 @@ pre {
   font-size: 13px;
   line-height: 1.428571429;
   color: #333333;
-  word-break: break-all;
-  word-wrap: break-word;
   background-color: #f5f5f5;
   border: 1px solid #cccccc;
   border-radius: 4px;
+  overflow-x: scroll;
 }
 
 pre code {
